Move handling of "dir" and "bdo" into ua.css so it doesn't get turned off when author styles are disabled.  Bug 261361, patch by fantasai <fantasai.bugs@inkedblade.net>, r=dbaron, sr=bzbarsky